# voltorb-flip

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  accept-rate-data.txt  accept-rate-exact.txt  build_wasm.sh  contact-tobs.txt
apps/assistant/: main.cpp
apps/selfplay/: main.cpp
debug/: ANALYSIS.md  benchmark_solver.cpp  investigate_diff.cpp  investigate_level2.cpp  level2_analysis.md  trace_fill.cpp  trace_legacy.cpp
docs/: README.md  algorithm.html  algorithm.md  game-rules.md  index.html
docs/css/: docs.css  style.css
docs/js/: app.js  board.js  solver-wasm.js  solver-wasm.wasm  solver-worker.js  solver.js  ui.js  voltorb_wasm.wasm
docs/wasm/: solver_bindings.cpp
documentation/: algorithm.md  architecture.md  building.md  optimal_solver.md
include/voltorb/: board.hpp  board_type.hpp  constraints.hpp  game.hpp  generator.hpp  probability.hpp  sampler.hpp  solver.hpp  transposition.hpp  types.hpp  zobrist.hpp
legacy/: README.md  legacy_solver.cpp  legacy_solver.hpp  main.cpp
legacy/algorithm/: algorithm.aux  algorithm.tex
legacy/old/: accept-rate-data-old.txt
legacy/old/voltorb-flip-old/: main.cpp
src/: board.cpp  board_type.cpp  constraints.cpp  game.cpp  generator.cpp  probability.cpp  sampler.cpp  solver.cpp  transposition.cpp  zobrist.cpp
tests/: CMakeLists.txt  test_board.cpp  test_constraints.cpp  test_legacy_comparison.cpp  test_solver.cpp
voltorb-flip/: main.cpp
voltorb-flip.xcodeproj/: project.pbxproj
voltorb-flip.xcodeproj/xcuserdata/gimmy.xcuserdatad/xcschemes/: xcschememanagement.plist
web/: README.md
web/css/: style.css
web/js/: app.js  boardTypes.js  generator.js  solver.js
